// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows a facets tab 1`] = `
<nav
  className="sc-bdVaJa bPGLpq secondaryNav"
>
  <ul
    className="sc-bwzfXH iOvBVw"
  >
    <li
      className="sc-EHOje dmhADK"
    >
      <a
        className="sc-bZQynM juTImE"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-EHOje dmhADK"
    >
      <a
        className="sc-bZQynM juTImE secondaryNavLink--alerts "
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
      </a>
    </li>
    <li
      className="sc-EHOje dmhADK"
    >
      <a
        className="sc-bZQynM juTImE tabLink isSelected"
        href="/r/foo/facets"
        onClick={[Function]}
      >
        Facets
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows error pane 1`] = `
<nav
  className="sc-bdVaJa bPGLpq secondaryNav"
>
  <ul
    className="sc-bwzfXH iOvBVw"
  >
    <li
      className="sc-EHOje dmhADK"
    >
      <a
        className="sc-bZQynM juTImE"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-EHOje dmhADK"
    >
      <a
        className="sc-bZQynM juTImE secondaryNavLink--alerts isSelected"
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows logs 1`] = `
<nav
  className="sc-bdVaJa bPGLpq secondaryNav"
>
  <ul
    className="sc-bwzfXH iOvBVw"
  >
    <li
      className="sc-EHOje dmhADK"
    >
      <a
        className="sc-bZQynM juTImE isSelected"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-EHOje dmhADK"
    >
      <a
        className="sc-bZQynM juTImE secondaryNavLink--alerts "
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows the number of errors in the error tab 1`] = `
<nav
  className="sc-bdVaJa bPGLpq secondaryNav"
>
  <ul
    className="sc-bwzfXH iOvBVw"
  >
    <li
      className="sc-EHOje dmhADK"
    >
      <a
        className="sc-bZQynM juTImE"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-EHOje dmhADK"
    >
      <a
        className="sc-bZQynM juTImE secondaryNavLink--alerts isSelected"
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
        <div
          className="sc-gzVnrw ewXMFN"
        >
          27
        </div>
      </a>
    </li>
  </ul>
</nav>
`;
